# anomaly-detection-service

./: API_DOCS.md  README.md  __init__.py  anomaly_cv.py  main.py  pyproject.toml  requirements.txt
anomaly_engine/: __init__.py  alignment.py  blobs.py  classification.py  color_metrics.py  data_structures.py  detection.py  io_utils.py  morphology.py  topology.py  visualization.py
inspections/1759682040828/runs/2c9c4ee9-6030-48da-8503-8860a9a036d1/: report.json
inspections/1759682259932/runs/cc233c26-990c-40f3-bd00-1083418bd472/: report.json
inspections/1759682386388/: index.json
inspections/1759682386388/runs/c9317516-b6f2-4beb-99a8-b45a8820a313/: report.json
inspections/1759682556940/: index.json
inspections/1759682556940/runs/471cf030-4c26-4b69-bb90-45d0d8285994/: anomalies.json  report.json
inspections/1759682671443/: index.json
inspections/1759682671443/runs/43f5282c-980f-4593-91ab-0931496044b4/: anomalies.json  report.json
inspections/1759682671443/runs/bc884a41-8404-48b6-b516-c6af36334699/: anomalies.json
inspections/1759682788372/: index.json
inspections/1759682788372/runs/3c8c2bb2-417a-4143-801d-fb64bad45b81/: report.json
inspections/1759692561725/: index.json
inspections/1759692821605/: index.json
inspections/1759693564372/: index.json
inspections/1759695321187/: index.json
inspections/1759695451827/: index.json
inspections/inspection_logs/1759682040828/: index.json
inspections/inspection_logs/1759682259932/: index.json
inspections/inspection_logs/1759683076659/: index.json
tests/: run_detect_local.py
(+29 files in other folders)
