[project]
name = "anomaly-detection-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "python-multipart==0.0.6",
    "scikit-image>=0.26.0",
    "uvicorn[standard]==0.27.0",
]
